# agile_robotics_industrial_automation

./: CMakeLists.txt  Instructions.txt  LICENSE  README.md  group3ariac-domain.pddl  group3ariac-problem.pddl  instructions.txt  package.xml
config/: 1.yaml  2.yaml  3-1.yaml  final04-2.yaml  final09-2.yaml  final14-2.yaml  team_config.yaml  team_config_1.yaml  team_config_2.yaml  team_config_2b.yaml
include/agile_robotics_industrial_automation/: new_order_manager.hpp  order_manager.hpp  order_manager_part2.hpp  sensor.hpp  sensor_2b.hpp  temp_order_manager.hpp  ur10_controller.hpp
launch/: ariac.launch
src/: order_manager.cpp  order_manager_2b.cpp  order_manager_part2.cpp  pddl_code.cpp  pose_broadcaster.cpp  qual1.cpp  quality.cpp  sensor.cpp  sensor_2b.cpp  team_config.yaml  tp.cpp  trial_example.cpp  ur10_controller.cpp
